# ctx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/ctx_cli/: Cargo.toml
crates/ctx_cli/src/: main.rs
crates/ctx_cli/src/commands/: add.rs  analyze.rs  commit.rs  debug.rs  gc.rs  init.rs  mod.rs  query.rs  rebuild.rs  stage.rs  verify.rs
crates/ctx_core/: Cargo.toml
crates/ctx_core/src/: cargo.rs  classification.rs  config.rs  error.rs  gc.rs  graph.rs  index.rs  lib.rs  narrative.rs  object_id.rs  object_store.rs  pack.rs  refs.rs  repo.rs  session.rs  session_handler.rs  staging.rs  types.rs  verify.rs
crates/ctx_core/src/lsp/: analyzer.rs  client.rs  edges.rs  mod.rs  protocol.rs  queries.rs
docs/: ctx-agent-integration.md  ctx-prd-session-extension.md  ctx-prd.md  ctx-session-boundaries.md  ctx-walkthrough.md
scripts/: CLI_REFERENCE.md  README.md  demo_interactive.sh  inspect_objects.sh  test_analyzer.sh  test_full_workflow.sh  test_prompt_pack.sh  test_prompt_pack_detailed.sh  test_prompt_pack_with_session.sh
tests/: Cargo.toml
tests/e2e/: main.rs
tests/e2e/harness/: assertions.rs  clock.rs  mod.rs  runner.rs  scenario.rs  steps.rs  workspace.rs
tests/e2e/scenarios/: crash_recovery.rs  fixtures_and_helpers.rs  happy_path.rs  mod.rs  retrieval.rs  stale_sessions.rs  state_transitions.rs
tests/fixtures/default/: README.md
