[workspace]
resolver = "2"
members = ["crates/*", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Hashing and compression
blake3 = "1.5"
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
postcard = { version = "1.0", features = ["alloc"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
fs2 = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
redb = "2.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# LSP
lsp-types = "0.94"

# Testing
tempfile = "3.10"
